	
	MISC
	
	* freeipmi.spec.in: Add gcrypt dependencies.

------------------------------------------------------------
2005-12-19  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_construct_trlr_session_auth_code): Fixed bug.

	* libfreeipmi/src/ipmi-rmcpplus-util.h,
	libfreeipmi/src/ipmi-rmcpplus-util.c
	(check_rmcpplus_session_trlr): New function.
	
2005-12-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-util.h,
	libfreeipmi/src/ipmi-rmcpplus-util.c
	(check_rmcpplus_rakp_message_2_key_exchange_authentication_code,
	check_rmcpplus_rakp_message_4_integrity_check_value,
	ipmi_calculate_rakp_3_key_exchange_authentication_code); New
	functions.

	* libfreeipmi/src/ipmi-rmcpplus-util.h,
	libfreeipmi/src/ipmi-rmcpplus-util.c (check_rmcpplus_payload_pad,
	check_rmcpplus_integriy_pad): Change return code type from int32_t
	to int8_t.
	
2005-12-14  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_construct_payload_buf_cmd_buf, _construct_payload_buf_cmd_tmpl,
	_deconstruct_payload_buf_cmd_buf,
	_deconstruct_payload_buf_cmd_tmpl): Removed functions.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_construct_payload_buf, _deconstruct_payload_buf): Reworked to
	handle template parameters.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_construct_payload, _construct_payload_special,
	_deconstruct_payload, _deconstruct_payload_special): Fixed to
	construct special packets correctly.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_construct_payload_confidentiality_none,
	_construct_payload_confidentiality_aes_cbc_128,
	_deconstruct-payload_confidentiality_none,
	_deconstruct_payload_confidentiality_aes_cbc_128): Modify for
	function name changes.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(assemble_ipmi_rmcpplus_pkt, unassemble_ipmi_rmcpplus_pkt,
	_construct_payload, _deconstruct_payload): Add additional checks.

	* libfreeipmi/src/ipmi-rmcpplus-debug.h,